# monty-hall

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/monty_hall/: __about__.py  game.py
tests/: __init__.py
